tests/baselines/reference/cannotInvokeNewOnIndexExpression.errors.txt
tests/cases/compiler/cannotInvokeNewOnIndexExpression.ts(1,23): error TS2304: Cannot find name 'any'.


==== tests/cases/compiler/cannotInvokeNewOnIndexExpression.ts (1 errors) ====
    var test: any[] = new any[1];
                          ~~~
!!! error TS2304: Cannot find name 'any'.